added constants and changes
